// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transition selectors > transition circleInBottomLeft 1`] = `
"/* layer: default */

        .st-circle-in-bottom-left {
          animation-name: stCircleInBottomLeft;
          
        }
        

        @keyframes stCircleInBottomLeft {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-bottom-left {
          animation-name: styledTransitionCircleInBottomLeft;
          
        }
        

        @keyframes styledTransitionCircleInBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInBottomRight 1`] = `
"/* layer: default */

        .st-circle-in-bottom-right {
          animation-name: stCircleInBottomRight;
          
        }
        

        @keyframes stCircleInBottomRight {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-bottom-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-bottom-right {
          animation-name: styledTransitionCircleInBottomRight;
          
        }
        

        @keyframes styledTransitionCircleInBottomRight {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInCenter 1`] = `
"/* layer: default */

        .st-circle-in-center {
          animation-name: stCircleInCenter;
          
        }
        

        @keyframes stCircleInCenter {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-center-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-center {
          animation-name: styledTransitionCircleInCenter;
          
        }
        

        @keyframes styledTransitionCircleInCenter {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInHesitate 1`] = `
"/* layer: default */

        .st-circle-in-hesitate {
          animation-name: stCircleInHesitate;
          
        }
        

        @keyframes stCircleInHesitate {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    40% {
      clip-path: var(--st-circle-hesitate);
    }
    100% {
      clip-path: var(--st-circle-center-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInHesitate with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-hesitate {
          animation-name: styledTransitionCircleInHesitate;
          
        }
        

        @keyframes styledTransitionCircleInHesitate {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    40% {
      clip-path: var(--styled-transition-circle-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInTopLeft 1`] = `
"/* layer: default */

        .st-circle-in-top-left {
          animation-name: stCircleInTopLeft;
          
        }
        

        @keyframes stCircleInTopLeft {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-top-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-top-left {
          animation-name: styledTransitionCircleInTopLeft;
          
        }
        

        @keyframes styledTransitionCircleInTopLeft {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInTopRight 1`] = `
"/* layer: default */

        .st-circle-in-top-right {
          animation-name: stCircleInTopRight;
          
        }
        

        @keyframes stCircleInTopRight {
          
    0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-top-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleInTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-in-top-right {
          animation-name: styledTransitionCircleInTopRight;
          
        }
        

        @keyframes styledTransitionCircleInTopRight {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutBottomLeft 1`] = `
"/* layer: default */

        .st-circle-out-bottom-left {
          animation-name: stCircleOutBottomLeft;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stCircleOutBottomLeft {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-bottom-left {
          animation-name: styledTransitionCircleOutBottomLeft;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionCircleOutBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutBottomRight 1`] = `
"/* layer: default */

        .st-circle-out-bottom-right {
          animation-name: stCircleOutBottomRight;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stCircleOutBottomRight {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-bottom-right {
          animation-name: styledTransitionCircleOutBottomRight;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionCircleOutBottomRight {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutCenter 1`] = `
"/* layer: default */

        .st-circle-out-center {
          animation-name: stCircleOutCenter;
          
        }
        

        @keyframes stCircleOutCenter {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-center-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-center {
          animation-name: styledTransitionCircleOutCenter;
          
        }
        

        @keyframes styledTransitionCircleOutCenter {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutHesitate 1`] = `
"/* layer: default */

        .st-circle-out-hesitate {
          animation-name: stCircleOutHesitate;
          
        }
        

        @keyframes stCircleOutHesitate {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    40% {
      clip-path: var(--st-circle-hesitate);
    }
    100% {
      clip-path: var(--st-circle-center-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutHesitate with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-hesitate {
          animation-name: styledTransitionCircleOutHesitate;
          
        }
        

        @keyframes styledTransitionCircleOutHesitate {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    40% {
      clip-path: var(--styled-transition-circle-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutTopLeft 1`] = `
"/* layer: default */

        .st-circle-out-top-left {
          animation-name: stCircleOutTopLeft;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stCircleOutTopLeft {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-top-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-top-left {
          animation-name: styledTransitionCircleOutTopLeft;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionCircleOutTopLeft {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutTopRight 1`] = `
"/* layer: default */

        .st-circle-out-top-right {
          animation-name: stCircleOutTopRight;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stCircleOutTopRight {
          
    0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-top-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition circleOutTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-circle-out-top-right {
          animation-name: styledTransitionCircleOutTopRight;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionCircleOutTopRight {
          
    0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondInCenter 1`] = `
"/* layer: default */

        .st-diamond-in-center {
          animation-name: stDiamondInCenter;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stDiamondInCenter {
          
    0% {
      clip-path: var(--st-diamond-center-out);
    }
    100% {
      clip-path: var(--st-diamond-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondInCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-diamond-in-center {
          animation-name: styledTransitionDiamondInCenter;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionDiamondInCenter {
          
    0% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondInDoubleScale 1`] = `
"/* layer: default */

        .st-diamond-in-double-scale {
          animation-name: stDiamondInDoubleScale;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stDiamondInDoubleScale {
          
    0% {
      clip-path: var(--st-diamond-center-out);
    }
    40% {
      clip-path: var(--st-diamond-hesitate);
    }
    100% {
      clip-path: var(--st-diamond-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondInDoubleScale with prefix 1`] = `
"/* layer: default */

        .styled-transition-diamond-in-double-scale {
          animation-name: styledTransitionDiamondInDoubleScale;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionDiamondInDoubleScale {
          
    0% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
    40% {
      clip-path: var(--styled-transition-diamond-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondOutCenter 1`] = `
"/* layer: default */

        .st-diamond-out-center {
          animation-name: stDiamondOutCenter;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stDiamondOutCenter {
          
    0% {
      clip-path: var(--st-diamond-center-in);
    }
    100% {
      clip-path: var(--st-diamond-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondOutCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-diamond-out-center {
          animation-name: styledTransitionDiamondOutCenter;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionDiamondOutCenter {
          
    0% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondOutDoubleScale 1`] = `
"/* layer: default */

        .st-diamond-out-double-scale {
          animation-name: stDiamondOutDoubleScale;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stDiamondOutDoubleScale {
          
    0% {
      clip-path: var(--st-diamond-center-in);
    }
    40% {
      clip-path: var(--st-diamond-hesitate);
    }
    100% {
      clip-path: var(--st-diamond-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition diamondOutDoubleScale with prefix 1`] = `
"/* layer: default */

        .styled-transition-diamond-out-double-scale {
          animation-name: styledTransitionDiamondOutDoubleScale;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionDiamondOutDoubleScale {
          
    0% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
    40% {
      clip-path: var(--styled-transition-diamond-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition polygonInOpposingCorners 1`] = `
"/* layer: default */

        .st-polygon-in-opposing-corners {
          animation-name: stPolygonInOpposingCorners;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stPolygonInOpposingCorners {
          
    0% {
      clip-path: var(--st-opposing-corners-out);
    }
    100% {
      clip-path: var(--st-opposing-corners-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition polygonInOpposingCorners with prefix 1`] = `
"/* layer: default */

        .styled-transition-polygon-in-opposing-corners {
          animation-name: styledTransitionPolygonInOpposingCorners;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionPolygonInOpposingCorners {
          
    0% {
      clip-path: var(--styled-transition-opposing-corners-out);
    }
    100% {
      clip-path: var(--styled-transition-opposing-corners-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition polygonOutOpposingCorners 1`] = `
"/* layer: default */

        .st-polygon-out-opposing-corners {
          animation-name: stPolygonOutOpposingCorners;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stPolygonOutOpposingCorners {
          
    0% {
      clip-path: var(--st-opposing-corners-in);
    }
    100% {
      clip-path: var(--st-opposing-corners-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition polygonOutOpposingCorners with prefix 1`] = `
"/* layer: default */

        .styled-transition-polygon-out-opposing-corners {
          animation-name: styledTransitionPolygonOutOpposingCorners;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionPolygonOutOpposingCorners {
          
    0% {
      clip-path: var(--styled-transition-opposing-corners-in);
    }
    100% {
      clip-path: var(--styled-transition-opposing-corners-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInBottomLeft 1`] = `
"/* layer: default */

        .st-square-in-bottom-left {
          animation-name: stSquareInBottomLeft;
          
        }
        

        @keyframes stSquareInBottomLeft {
          
    0% {
      clip-path: var(--st-square-top-right-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-bottom-left {
          animation-name: styledTransitionSquareInBottomLeft;
          
        }
        

        @keyframes styledTransitionSquareInBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-square-top-right-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInBottomRight 1`] = `
"/* layer: default */

        .st-square-in-bottom-right {
          animation-name: stSquareInBottomRight;
          
        }
        

        @keyframes stSquareInBottomRight {
          
    0% {
      clip-path: var(--st-square-top-left-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-bottom-right {
          animation-name: styledTransitionSquareInBottomRight;
          
        }
        

        @keyframes styledTransitionSquareInBottomRight {
          
    0% {
      clip-path: var(--styled-transition-square-top-left-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInCenter 1`] = `
"/* layer: default */

        .st-square-in-center {
          animation-name: stSquareInCenter;
          
        }
        

        @keyframes stSquareInCenter {
          
    0% {
      clip-path: var(--st-square-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-center {
          animation-name: styledTransitionSquareInCenter;
          
        }
        

        @keyframes styledTransitionSquareInCenter {
          
    0% {
      clip-path: var(--styled-transition-square-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInHesitate 1`] = `
"/* layer: default */

        .st-square-in-hesitate {
          animation-name: stSquareInHesitate;
          
        }
        

        @keyframes stSquareInHesitate {
          
    0% {
      clip-path: var(--st-square-out);
    }
    40% {
      clip-path: var(--st-square-hesitate);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInHesitate with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-hesitate {
          animation-name: styledTransitionSquareInHesitate;
          
        }
        

        @keyframes styledTransitionSquareInHesitate {
          
    0% {
      clip-path: var(--styled-transition-square-out);
    }
    40% {
      clip-path: var(--styled-transition-square-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInTopLeft 1`] = `
"/* layer: default */

        .st-square-in-top-left {
          animation-name: stSquareInTopLeft;
          
        }
        

        @keyframes stSquareInTopLeft {
          
    0% {
      clip-path: var(--st-square-bottom-right-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-top-left {
          animation-name: styledTransitionSquareInTopLeft;
          
        }
        

        @keyframes styledTransitionSquareInTopLeft {
          
    0% {
      clip-path: var(--styled-transition-square-bottom-right-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInTopRight 1`] = `
"/* layer: default */

        .st-square-in-top-right {
          animation-name: stSquareInTopRight;
          
        }
        

        @keyframes stSquareInTopRight {
          
    0% {
      clip-path: var(--st-square-bottom-left-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareInTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-in-top-right {
          animation-name: styledTransitionSquareInTopRight;
          
        }
        

        @keyframes styledTransitionSquareInTopRight {
          
    0% {
      clip-path: var(--styled-transition-square-bottom-left-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutBottomLeft 1`] = `
"/* layer: default */

        .st-square-out-bottom-left {
          animation-name: stSquareOutBottomLeft;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stSquareOutBottomLeft {
          
    0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-bottom-left {
          animation-name: styledTransitionSquareOutBottomLeft;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionSquareOutBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutBottomRight 1`] = `
"/* layer: default */

        .st-square-out-bottom-right {
          animation-name: stSquareOutBottomRight;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stSquareOutBottomRight {
          
    0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-bottom-right {
          animation-name: styledTransitionSquareOutBottomRight;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionSquareOutBottomRight {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutCenter 1`] = `
"/* layer: default */

        .st-square-out-center {
          animation-name: stSquareOutCenter;
          
        }
        

        @keyframes stSquareOutCenter {
          
    0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutCenter with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-center {
          animation-name: styledTransitionSquareOutCenter;
          
        }
        

        @keyframes styledTransitionSquareOutCenter {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutHesitate 1`] = `
"/* layer: default */

        .st-square-out-hesitate {
          animation-name: stSquareOutHesitate;
          
        }
        

        @keyframes stSquareOutHesitate {
          
    0% {
      clip-path: var(--st-square-in);
    }
    40% {
      clip-path: var(--st-square-hesitate);
    }
    100% {
      clip-path: var(--st-square-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutHesitate with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-hesitate {
          animation-name: styledTransitionSquareOutHesitate;
          
        }
        

        @keyframes styledTransitionSquareOutHesitate {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    40% {
      clip-path: var(--styled-transition-square-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-square-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutTopLeft 1`] = `
"/* layer: default */

        .st-square-out-top-left {
          animation-name: stSquareOutTopLeft;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stSquareOutTopLeft {
          
    0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-top-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-top-left {
          animation-name: styledTransitionSquareOutTopLeft;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionSquareOutTopLeft {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-top-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutTopRight 1`] = `
"/* layer: default */

        .st-square-out-top-right {
          animation-name: stSquareOutTopRight;
          
    --st-transition-duration: 1.5s;
  
        }
        

        @keyframes stSquareOutTopRight {
          
    0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-top-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition squareOutTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-square-out-top-right {
          animation-name: styledTransitionSquareOutTopRight;
          
    --styled-transition-transition-duration: 1.5s;
  
        }
        

        @keyframes styledTransitionSquareOutTopRight {
          
    0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-top-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeCinematicIn 1`] = `
"/* layer: default */

        .st-wipe-cinematic-in {
          animation-name: stWipeCinematicIn;
          
        }
        

        @keyframes stWipeCinematicIn {
          
    0% {
      clip-path: var(--st-wipe-cinematic-out);
    }
    30%,
    70% {
      clip-path: var(--st-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeCinematicIn with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-cinematic-in {
          animation-name: styledTransitionWipeCinematicIn;
          
        }
        

        @keyframes styledTransitionWipeCinematicIn {
          
    0% {
      clip-path: var(--styled-transition-wipe-cinematic-out);
    }
    30%,
    70% {
      clip-path: var(--styled-transition-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeCinematicOut 1`] = `
"/* layer: default */

        .st-wipe-cinematic-out {
          animation-name: stWipeCinematicOut;
          
        }
        

        @keyframes stWipeCinematicOut {
          
    0% {
      clip-path: var(--st-wipe-in);
    }
    30%,
    70% {
      clip-path: var(--st-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--st-wipe-cinematic-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeCinematicOut with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-cinematic-out {
          animation-name: styledTransitionWipeCinematicOut;
          
        }
        

        @keyframes styledTransitionWipeCinematicOut {
          
    0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    30%,
    70% {
      clip-path: var(--styled-transition-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--styled-transition-wipe-cinematic-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottom 1`] = `
"/* layer: default */

        .st-wipe-in-bottom {
          animation-name: stWipeInBottom;
          
        }
        

        @keyframes stWipeInBottom {
          
    0% {
      clip-path: var(--st-wipe-bottom);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottom with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-bottom {
          animation-name: styledTransitionWipeInBottom;
          
        }
        

        @keyframes styledTransitionWipeInBottom {
          
    0% {
      clip-path: var(--styled-transition-wipe-bottom);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottomLeft 1`] = `
"/* layer: default */

        .st-wipe-in-bottom-left {
          animation-name: stWipeInBottomLeft;
          
        }
        

        @keyframes stWipeInBottomLeft {
          
    0% {
      clip-path: var(--st-wipe-top-right-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-bottom-left {
          animation-name: styledTransitionWipeInBottomLeft;
          
        }
        

        @keyframes styledTransitionWipeInBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-right-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottomRight 1`] = `
"/* layer: default */

        .st-wipe-in-bottom-right {
          animation-name: stWipeInBottomRight;
          
        }
        

        @keyframes stWipeInBottomRight {
          
    0% {
      clip-path: var(--st-wipe-top-left-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-bottom-right {
          animation-name: styledTransitionWipeInBottomRight;
          
        }
        

        @keyframes styledTransitionWipeInBottomRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-left-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInLeft 1`] = `
"/* layer: default */

        .st-wipe-in-left {
          animation-name: stWipeInLeft;
          
        }
        

        @keyframes stWipeInLeft {
          
    0% {
      clip-path: var(--st-wipe-left);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-left {
          animation-name: styledTransitionWipeInLeft;
          
        }
        

        @keyframes styledTransitionWipeInLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-left);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInRight 1`] = `
"/* layer: default */

        .st-wipe-in-right {
          animation-name: stWipeInRight;
          
        }
        

        @keyframes stWipeInRight {
          
    0% {
      clip-path: var(--st-wipe-right);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-right {
          animation-name: styledTransitionWipeInRight;
          
        }
        

        @keyframes styledTransitionWipeInRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-right);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTop 1`] = `
"/* layer: default */

        .st-wipe-in-top {
          animation-name: stWipeInTop;
          
        }
        

        @keyframes stWipeInTop {
          
    0% {
      clip-path: var(--st-wipe-top);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTop with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-top {
          animation-name: styledTransitionWipeInTop;
          
        }
        

        @keyframes styledTransitionWipeInTop {
          
    0% {
      clip-path: var(--styled-transition-wipe-top);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTopLeft 1`] = `
"/* layer: default */

        .st-wipe-in-top-left {
          animation-name: stWipeInTopLeft;
          
        }
        

        @keyframes stWipeInTopLeft {
          
    0% {
      clip-path: var(--st-wipe-bottom-right-out);
    }
    100% {
      clip-path: var(--st-wipe-top-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-top-left {
          animation-name: styledTransitionWipeInTopLeft;
          
        }
        

        @keyframes styledTransitionWipeInTopLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-bottom-right-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTopRight 1`] = `
"/* layer: default */

        .st-wipe-in-top-right {
          animation-name: stWipeInTopRight;
          
        }
        

        @keyframes stWipeInTopRight {
          
    0% {
      clip-path: var(--st-wipe-bottom-left-out);
    }
    100% {
      clip-path: var(--st-wipe-top-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeInTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-in-top-right {
          animation-name: styledTransitionWipeInTopRight;
          
        }
        

        @keyframes styledTransitionWipeInTopRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-bottom-left-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottom 1`] = `
"/* layer: default */

        .st-wipe-out-bottom {
          animation-name: stWipeOutBottom;
          
        }
        

        @keyframes stWipeOutBottom {
          
    0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottom with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-bottom {
          animation-name: styledTransitionWipeOutBottom;
          
        }
        

        @keyframes styledTransitionWipeOutBottom {
          
    0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottomLeft 1`] = `
"/* layer: default */

        .st-wipe-out-bottom-left {
          animation-name: stWipeOutBottomLeft;
          
        }
        

        @keyframes stWipeOutBottomLeft {
          
    0% {
      clip-path: var(--st-wipe-top-right-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottomLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-bottom-left {
          animation-name: styledTransitionWipeOutBottomLeft;
          
        }
        

        @keyframes styledTransitionWipeOutBottomLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-right-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-left-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottomRight 1`] = `
"/* layer: default */

        .st-wipe-out-bottom-right {
          animation-name: stWipeOutBottomRight;
          
        }
        

        @keyframes stWipeOutBottomRight {
          
    0% {
      clip-path: var(--st-wipe-top-left-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutBottomRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-bottom-right {
          animation-name: styledTransitionWipeOutBottomRight;
          
        }
        

        @keyframes styledTransitionWipeOutBottomRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-left-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-right-out);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutLeft 1`] = `
"/* layer: default */

        .st-wipe-out-left {
          animation-name: stWipeOutLeft;
          
        }
        

        @keyframes stWipeOutLeft {
          
    0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-left);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-left {
          animation-name: styledTransitionWipeOutLeft;
          
        }
        

        @keyframes styledTransitionWipeOutLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-left);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutRight 1`] = `
"/* layer: default */

        .st-wipe-out-right {
          animation-name: stWipeOutRight;
          
        }
        

        @keyframes stWipeOutRight {
          
    0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-right);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-right {
          animation-name: styledTransitionWipeOutRight;
          
        }
        

        @keyframes styledTransitionWipeOutRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-right);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTop 1`] = `
"/* layer: default */

        .st-wipe-out-top {
          animation-name: stWipeOutTop;
          
        }
        

        @keyframes stWipeOutTop {
          
    0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-top);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTop with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-top {
          animation-name: styledTransitionWipeOutTop;
          
        }
        

        @keyframes styledTransitionWipeOutTop {
          
    0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTopLeft 1`] = `
"/* layer: default */

        .st-wipe-out-top-left {
          animation-name: stWipeOutTopLeft;
          
        }
        

        @keyframes stWipeOutTopLeft {
          
    0% {
      clip-path: var(--st-wipe-top-right-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTopLeft with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-top-left {
          animation-name: styledTransitionWipeOutTopLeft;
          
        }
        

        @keyframes styledTransitionWipeOutTopLeft {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-right-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-left-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTopRight 1`] = `
"/* layer: default */

        .st-wipe-out-top-right {
          animation-name: stWipeOutTopRight;
          
        }
        

        @keyframes stWipeOutTopRight {
          
    0% {
      clip-path: var(--st-wipe-top-left-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-right-in);
    }
  
        }
        "
`;

exports[`transition selectors > transition wipeOutTopRight with prefix 1`] = `
"/* layer: default */

        .styled-transition-wipe-out-top-right {
          animation-name: styledTransitionWipeOutTopRight;
          
        }
        

        @keyframes styledTransitionWipeOutTopRight {
          
    0% {
      clip-path: var(--styled-transition-wipe-top-left-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-right-in);
    }
  
        }
        "
`;
